@@ -1,18 +1,30 @@
 package br.com.alura.AluraFake.course;
 
-import br.com.alura.AluraFake.user.*;
+import br.com.alura.AluraFake.course.dto.CourseListItemDTO;
+import br.com.alura.AluraFake.course.dto.NewCourseDTO;
+import br.com.alura.AluraFake.infra.exception.BusinessRuleException;
+import br.com.alura.AluraFake.user.Role;
+import br.com.alura.AluraFake.user.User;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.*;
+import java.util.List;
 
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(CourseController.class)
@@ -20,95 +32,91 @@ class CourseControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
+
     @MockBean
-    private UserRepository userRepository;
-    @MockBean
-    private CourseRepository courseRepository;
+    private CourseService courseService;
+
     @Autowired
     private ObjectMapper objectMapper;
 
     @Test
-    void newCourseDTO__should_return_bad_request_when_email_is_invalid() throws Exception {
-
+    @DisplayName("Deve retornar 201 Created e o DTO do curso quando a requisição for válida")
+    @WithMockUser(roles = "INSTRUCTOR")
+    void createCourse_shouldReturnCreated_whenRequestIsValid() throws Exception {
+        // Arrange
         NewCourseDTO newCourseDTO = new NewCourseDTO();
-        newCourseDTO.setTitle("Java");
-        newCourseDTO.setDescription("Curso de Java");
+        newCourseDTO.setTitle("Java Completo");
+        newCourseDTO.setDescription("Do básico ao avançado");
         newCourseDTO.setEmailInstructor("paulo@alura.com.br");
 
-        doReturn(Optional.empty()).when(userRepository)
-                .findByEmail(newCourseDTO.getEmailInstructor());
+        User instructor = new User("Paulo", "paulo@alura.com.br", Role.INSTRUCTOR, "123456");
+        Course courseSalvo = new Course(newCourseDTO.getTitle(), newCourseDTO.getDescription(), instructor);
+        courseSalvo.setId(1L);
 
+        when(courseService.createCourse(any(NewCourseDTO.class))).thenReturn(courseSalvo);
+
+        // Act & Assert
         mockMvc.perform(post("/course/new")
+                        .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
-    }
-
-
-    @Test
-    void newCourseDTO__should_return_bad_request_when_email_is_no_instructor() throws Exception {
-
-        NewCourseDTO newCourseDTO = new NewCourseDTO();
-        newCourseDTO.setTitle("Java");
-        newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
-
-        User user = mock(User.class);
-        doReturn(false).when(user).isInstructor();
-
-        doReturn(Optional.of(user)).when(userRepository)
-                .findByEmail(newCourseDTO.getEmailInstructor());
-
-        mockMvc.perform(post("/course/new")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(newCourseDTO)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
+                .andExpect(status().isCreated())
+                .andExpect(header().string("Location", "http://localhost/course/1"))
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.title").value("Java Completo"));
     }
 
     @Test
-    void newCourseDTO__should_return_created_when_new_course_request_is_valid() throws Exception {
-
+    @DisplayName("Deve retornar 400 Bad Request quando o serviço lançar uma exceção de negócio")
+    @WithMockUser(roles = "INSTRUCTOR")
+    void createCourse_shouldReturnBadRequest_whenServiceThrowsException() throws Exception {
+        // Arrange
         NewCourseDTO newCourseDTO = new NewCourseDTO();
         newCourseDTO.setTitle("Java");
         newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
+        newCourseDTO.setEmailInstructor("aluno@email.com");
 
-        User user = mock(User.class);
-        doReturn(true).when(user).isInstructor();
+        when(courseService.createCourse(any(NewCourseDTO.class)))
+                .thenThrow(new BusinessRuleException("Usuário não é um instrutor"));
 
-        doReturn(Optional.of(user)).when(userRepository).findByEmail(newCourseDTO.getEmailInstructor());
-
+        // Act & Assert
         mockMvc.perform(post("/course/new")
+                        .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
-                .andExpect(status().isCreated());
-
-        verify(courseRepository, times(1)).save(any(Course.class));
+                .andExpect(status().isBadRequest());
     }
 
     @Test
-    void listAllCourses__should_list_all_courses() throws Exception {
-        User paulo = new User("Paulo", "paulo@alua.com.br", Role.INSTRUCTOR);
-
+    @DisplayName("Deve retornar 200 OK e a lista de cursos ao listar todos")
+    @WithMockUser
+    void listAllCourses_should_list_all_courses() throws Exception {
+        // Arrange
+        // CORREÇÃO: Usando o construtor correto (name, email, role, password)
+        User paulo = new User("Paulo", "paulo@alura.com.br", Role.INSTRUCTOR, "123456");
         Course java = new Course("Java", "Curso de java", paulo);
-        Course hibernate = new Course("Hibernate", "Curso de hibernate", paulo);
-        Course spring = new Course("Spring", "Curso de spring", paulo);
+        CourseListItemDTO javaDto = new CourseListItemDTO(java);
 
-        when(courseRepository.findAll()).thenReturn(Arrays.asList(java, hibernate, spring));
+        when(courseService.findAllCourses()).thenReturn(List.of(javaDto));
 
+        // Act & Assert
         mockMvc.perform(get("/course/all")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].title").value("Java"))
-                .andExpect(jsonPath("$[0].description").value("Curso de java"))
-                .andExpect(jsonPath("$[1].title").value("Hibernate"))
-                .andExpect(jsonPath("$[1].description").value("Curso de hibernate"))
-                .andExpect(jsonPath("$[2].title").value("Spring"))
-                .andExpect(jsonPath("$[2].description").value("Curso de spring"));
+                .andExpect(jsonPath("$.[0].description").value("Curso de java"));
     }
 
+    @Test
+    @DisplayName("Deve chamar o serviço de publicação e retornar 200 OK quando o usuário for instrutor")
+    @WithMockUser(roles = "INSTRUCTOR") // Simula um usuário logado com o papel de INSTRUCTOR
+    void publishCourse_shouldCallServiceAndReturnOk_whenUserIsInstructor() throws Exception {
+        doNothing().when(courseService).publishCourse(1L);
+
+        mockMvc.perform(post("/course/1/publish")
+                        .with(csrf()))
+                .andExpect(status().isOk());
+
+        verify(courseService, times(1)).publishCourse(1L);
+    }
 }
